# EndToEnd-Forecasting

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboards/: README.md  streamlit_app.py
notebooks/: EDA.ipynb
src/: README.md
src/forecasting/api/: app.py  schemas.py
src/forecasting/config/: settings.py
src/forecasting/data/: loader.py  simulation.py  validation.py
src/forecasting/features/: pipeline.py
src/forecasting/models/: base.py  classical.py  deep.py  registry.py
src/forecasting/pipeline/: backtesting.py  metrics.py
src/forecasting/training/: backtest.py  train.py
tests/: README.md  test_api.py  test_features.py
